@@ -1,4 +1,5 @@
 == 0.1.4
+* Xpath searches with attribute values containing a <tt>/</tt>, like <tt>style[@type="text/css"]</tt>, broke the query parser.
 
 == 0.1.3 - 2010.06.20
 * The Xpath function 's' will return an empty Rind::Node rather than +nil+.
